Fix white space display on highlight keywords

--- a/src/App.css
+++ b/src/App.css
@@ -153,6 +153,7 @@ input, textarea, select {
   text-overflow: ellipsis;
   white-space: nowrap;
   margin-bottom: -2px;
+  display: block;
 }
 
 .search-result-field b {
